Fix search box align issue

--- a/assets/base.scss
+++ b/assets/base.scss
@@ -362,14 +362,12 @@ header {
 #search-container {
   position: fixed;
   z-index: 9999;
-  left: 0;
-  top: 0;
+  // left: 0;
+  // top: 0;
   width: 50vw;
   height: 100%;
   overflow: scroll;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: none;
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 
